2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mds, Packages.mdse: Added packaging project.
	* configure.ac: Bump version to 0.2.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.ac, Makefile.am: Added support for signing and GAC
	  install.

2007-04-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.sln: Added msbuild project files. Patch by Matthijs ter
	  Woord.

2007-03-30  Lluis Sanchez Gual <lluis@novell.com> 

	* mautil/mautil.in: Don't change current directory when starting the
	  app.

2007-03-28  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/Mono.Addins.mdp,
	  Mono.Addins/Mono.Addins/GettextCatalog.cs, Mono.Addins/Makefile.am:
	  Removed Mono.Posix reference.
	* Mono.Addins/Mono.Addins/ConfigurationInfo.cs: Removed unused file.
	* Mono.Addins/Mono.Addins/AddinRegistry.cs,
	  Mono.Addins/Mono.Addins.Database/Util.cs: Use a different path for
	  the global registry in windows.
	* Mono.Addins/Mono.Addins.Database/AddinUpdateData.cs: Set the
	  RootAddin property of root add-in extensions. Collect object type
	  extensions which for extension points defined in root add-ins.

2007-03-26  Lluis Sanchez Gual <lluis@novell.com> 

	* AUTHORS, README, NEWS: Added.
	* Makefile.am: Updated.

2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	Avoid installing assemblies generated by samples and tests.

2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	Added missing makefiles.

2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.ac: Make compilation of tests and gui libs optional.
